--- a/JavaScript/AsyncJS/Color-Changer-AsyncJS/index.html
+++ b/JavaScript/AsyncJS/Color-Changer-AsyncJS/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conatiner" style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 90vh;
+    <div class="container" style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 90vh;
     width: 100%; overflow: hidden;">
         <h1>Start should change the <code>bg-color</code> every second</h1>
         <div class="button-container">
@@ -16,4 +16,6 @@
         </div>
     </div>
 </body>
+<script src="script.js">
+</script>
 </html>
