Aug 10 - Handled a case where user doesn't exist

--- a/JavaScript/AsyncJS/Github-Card/index.html
+++ b/JavaScript/AsyncJS/Github-Card/index.html
@@ -11,25 +11,27 @@
 
 <body>
     <nav class="nav-bar">
-        <a href = "/."><img src="./images/logoipsum-custom-logo.svg" height="50px"></a>
+        <a href="/."><img src="./images/logoipsum-custom-logo.svg" height="50px"></a>
     </nav>
-    <div id = "input-submit-container" class="card-container active">
-        <form id = "form">
-        <input id = "input-bar" type = "text" placeholder="Enter github username.">
-        <button id = "submit-btn" type = "submit">Submit</button>
+    <div id="input-submit-container" class="card-container active">
+        <form id="form">
+            <input id="input-bar" type="text" placeholder="Enter github username.">
+            <button id="submit-btn" type="submit">Submit</button>
         </form>
     </div>
 
-    <!-- <div id="card-error">
-        <p id = "error">User doesn't exists.</p>
-    </div> -->
+    <div class="error-card-container">
+        <div id="card-error">
+            <p id="error">User doesn't exists.</p>
+        </div>
+    </div>
 
-    <div id = "card-container" class="card-container">
+    <div id="card-container" class="card-container">
         <div class="github-card">
-            <img id="avatar" class = "avatar" src = "https://placehold.co/120x120" alt="GitHub User Avatar">
-            <h2 id="user-name" class = "name">User Name ethe auga</h2>
-            <p id="location" class = "location">Location: </p>
-            <p id="user-bio" class = "bio">Bio</p>
+            <img id="avatar" class="avatar" src="https://placehold.co/120x120" alt="GitHub User Avatar">
+            <h2 id="user-name" class="name">User Name ethe auga</h2>
+            <p id="location" class="location">Location: </p>
+            <p id="user-bio" class="bio">Bio</p>
 
             <div class="stats">
                 <div class="stat-item">
