Aug 23 - Completed the Color Palette Project

--- a/JavaScript/Projects/Colour-Palette-Generator/index.html
+++ b/JavaScript/Projects/Colour-Palette-Generator/index.html
@@ -18,10 +18,16 @@
     <div class="container">
         <h1>Color Palette Generator</h1>
 
+        <div class="button-container">
         <button id="generate-btn">
             <i class="fas fa-sync-alt"></i>
             Generate Palette
         </button>
+        <button id="keep-generating-btn">
+            <i class = "fas fa-sync-alt"></i>
+            Keep Generating
+        </button>
+        </div>
 
         <div class="palette-container">
             <!--Box 1-->
