28 Aug - Fixed styling for Expense-Tracker

--- a/JavaScript/Projects/Expense-Tracker/index.html
+++ b/JavaScript/Projects/Expense-Tracker/index.html
@@ -44,10 +44,35 @@
         </div>
 
         <div class="main-content">
+            <h2>Transactions</h2>
             <div class="transaction-container">
-                <h2>Transactions</h2>
                 <ul id="transaction-list">
                     <!--Will add Transactions through JS :-) -->
+                    <li class="transaction">
+                        <span class="transaction-description">Salary</span>
+                        <span class="transaction-amount">₹10,000</span>
+                        <span class="transaction-date">2025-08-28</span>
+                    </li>
+                    <li class="transaction">
+                        <span class="transaction-description">Salary</span>
+                        <span class="transaction-amount">₹10,000</span>
+                        <span class="transaction-date">2025-08-28</span>
+                    </li>
+                    <li class="transaction">
+                        <span class="transaction-description">Salary</span>
+                        <span class="transaction-amount">₹10,000</span>
+                        <span class="transaction-date">2025-08-28</span>
+                    </li>
+                    <li class="transaction">
+                        <span class="transaction-description">Salary</span>
+                        <span class="transaction-amount">₹10,000</span>
+                        <span class="transaction-date">2025-08-28</span>
+                    </li>
+                    <li class="transaction">
+                        <span class="transaction-description">Salary</span>
+                        <span class="transaction-amount">₹10,000</span>
+                        <span class="transaction-date">2025-08-28</span>
+                    </li>
                 </ul>
             
             <div class="form-container">
