--- a/JavaScript/Projects/Expense-Tracker/index.html
+++ b/JavaScript/Projects/Expense-Tracker/index.html
@@ -17,17 +17,17 @@
         <header id="header">
             <i id="logo" class="bi bi-wallet2"></i>
             <span class="header-title">Expense Tracker</span>
-            <p class="description">Track your spending daily pls.</p>
+            <p class="description">Track your daily spending wisely.</p>
         </header>
 
         <div class="balance-container">
             <h2 class="balance-heading">Current Balance</h2>
-            <h1 id="current-balance">₹6969</h1>
+            <h1 id="current-balance">₹0000</h1>
             <div class="summary">
                 <div class="income">
                     <div class="icons-container">
                         <i id="income-icon" class="bi bi-cash-coin"></i>
-                        <span id="percentage">+10.5%</span>
+                        <span id="percentage">+0.0%</span>
                     </div>
                     <h3>Income</h3>
                     <p id="income-amount">₹0.00</p>
@@ -35,7 +35,7 @@
                 <div class="expenses">
                     <div class="icons-container">
                         <i id = "expense-icon" class="bi bi-graph-down-arrow"></i>
-                        <span id="percentage">-10.2</span>
+                        <span id="percentage">-0.0</span>
                     </div>
                     <h3>Expenses</h3>
                     <p id="expense-amount">₹0.00</p>
@@ -48,30 +48,30 @@
             <div class="transaction-container">
                 <ul id="transaction-list">
                     <!--Will add Transactions through JS :-) -->
-                    <li class="transaction">
+                    <li class="transaction expense">
                         <span class="transaction-description">Salary</span>
-                        <span class="transaction-amount">₹10,000</span>
                         <span class="transaction-date">2025-08-28</span>
+                        <span class="transaction-amount">₹10,000</span>
                     </li>
-                    <li class="transaction">
+                    <li class="transaction income">
                         <span class="transaction-description">Salary</span>
-                        <span class="transaction-amount">₹10,000</span>
                         <span class="transaction-date">2025-08-28</span>
+                        <span class="transaction-amount">₹10,000</span>
                     </li>
-                    <li class="transaction">
+                    <li class="transaction income">
                         <span class="transaction-description">Salary</span>
-                        <span class="transaction-amount">₹10,000</span>
                         <span class="transaction-date">2025-08-28</span>
+                        <span class="transaction-amount">₹10,000</span>
                     </li>
-                    <li class="transaction">
+                    <li class="transaction expense">
                         <span class="transaction-description">Salary</span>
-                        <span class="transaction-amount">₹10,000</span>
                         <span class="transaction-date">2025-08-28</span>
+                        <span class="transaction-amount">₹10,000</span>
                     </li>
-                    <li class="transaction">
+                    <li class="transaction expense">
                         <span class="transaction-description">Salary</span>
-                        <span class="transaction-amount">₹10,000</span>
                         <span class="transaction-date">2025-08-28</span>
+                        <span class="transaction-amount">₹10,000</span>
                     </li>
                 </ul>
             
@@ -92,7 +92,13 @@
             </div>
             </div>
         </div>
+
+        <!-- <footer class = "footer">
+            <p>This is the footer</p>
+            <button type="submit">Clear Local Storage</button>
+        </footer> -->
     </div>
+    <script src = "script.js" defer></script>
 </body>
 
 </html>
