--- a/JavaScript/Projects/Bookmark-Saver/index.html
+++ b/JavaScript/Projects/Bookmark-Saver/index.html
@@ -15,7 +15,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            overflow: hidden;
+            overflow: auto;
         }
 
         body {
@@ -143,6 +143,7 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
+            overflow: auto;
         }
 
         #bookmarks-list li {
@@ -211,6 +212,7 @@
         </form>
 
         <ul id="bookmarks-list">
+            <!--Dummy Items-->
             <li>
                 <a>Item1</a>
                 <button>Remove</button>
