--- a/JS-Referesher/Projects/CardCarousel/index.html
+++ b/JS-Referesher/Projects/CardCarousel/index.html
@@ -2,30 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Search Users</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <div class="flex flex-col gap-10 items-center">
-        <input class="px-5 py-5 rounded outline-none bg-[#111] text-[#888]" type="text" id="input"
-            placeholder="Search..."></input>
-        <div class="flex gap-10">
-            <div class="card">
-                <img src="https://plus.unsplash.com/premium_photo-1679692887717-dc7f5d090271?q=80&w=77&auto=format"
-                    class="bg-img" height="120px" width="120px">
-                <div class="blurred-layer"></div>
-                <div class="content">
-                    <h3>User</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum.</p>
-                </div>
-            </div>
+        <input class="inp px-5 py-5 rounded outline-none bg-[#111] text-[#888]" type="text" placeholder="Search...">
+        <div class="cards flex gap-10">
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 
 </html>
