JS-Refresher/CallAppProject(Changes Made)

--- a/JS-Referesher/Projects/CallApp/index.html
+++ b/JS-Referesher/Projects/CallApp/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Call App</title>
     <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
@@ -66,45 +73,47 @@
 
         <div class="call-ui">
 
-    <div class="floating-controls">
-        <button>+</button>
-        <button>↑</button>
-        <button>↓</button>
-    </div>
+            <div class="floating-controls">
+                <button>+</button>
+                <button>↑</button>
+                <button>↓</button>
+            </div>
 
-    <div class="call-card">
+            <div class="call-card">
 
-        <div class="avatar">
-            <img src="https://i.pravatar.cc/100?img=12">
+                <div class="avatar">
+                    <img src="https://i.pravatar.cc/100?img=12">
+                </div>
+
+                <div class="info">
+                    <h3>John Doe</h3>
+                    <div class="info-container">
+                        <p>
+                            Home town
+                            <span>Singapore</span>
+                        </p>
+                        <small>
+                            Bookings
+                            <span>3 times</span>
+                        </small>
+                    </div>
+                </div>
+
+                <div class="actions">
+                    <button class="call"><i class = "fas fa-phone"></i> Call</button>
+                    <button class="msg"><i class = "fas fa-message"></i> Message</button>
+                </div>
+
+            </div>
+
+            <div class="status-dots">
+                <span class="dot black"></span>
+                <span class="dot purple"></span>
+                <span class="dot orange"></span>
+                <span class="dot green"></span>
+            </div>
+
         </div>
-
-        <div class="info">
-            <h3>John Doe</h3>
-            <p>
-                Home town
-                <span>Singapore</span>
-            </p>
-            <small>
-                Bookings
-                <span>3 times</span>
-            </small>
-        </div>
-
-        <div class="actions">
-            <button class="call">📞 Call</button>
-            <button class="msg">Message</button>
-        </div>
-
-    </div>
-
-    <div class="status-dots">
-        <span class="dot black"></span>
-        <span class="dot purple"></span>
-        <span class="dot orange"></span>
-        <span class="dot green"></span>
-    </div>
-
-</div>
 
     </div>
 </body>
